frontv1.2 bypass http/https mixed content browser protection

--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
         }
       }
     </style>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body>
     <div id="panel">
-      <div>Front: v1.1</div>
+      <div>Front: v1.2</div>
       <div>|</div>
       <div>Back: v<span id="dispBackendVersion">0</span></div>
       <div>|</div>
